--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -26,6 +26,7 @@
         </Style>
 
         <Style TargetType="Button">
+            <!--
             <Setter Property="Height" Value="30"/>
             <Setter Property="Background" Value="#106EBE"/>
             <Setter Property="Foreground" Value="white"/>
@@ -34,6 +35,30 @@
                     <Setter Property="Background" Value="White"/>
                 </Trigger>
             </Style.Triggers>
+            -->
+            <Setter Property="Height" Value="30"/>
+            <Setter Property="Background" Value="#106EBE"/>
+            <Setter Property="Foreground" Value="White"/>
+            <Setter Property="BorderThickness" Value="0"/>
+            <!-- Remove default border -->
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Border x:Name="border" 
+                        Background="{TemplateBinding Background}"
+                        CornerRadius="2">
+                            <ContentPresenter HorizontalAlignment="Center"
+                                      VerticalAlignment="Center"/>
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter TargetName="border" Property="Background" Value="#005AA1"/>
+                                <!-- Text color on hover -->
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
         </Style>
 
         <Style TargetType="TextBlock" x:Key="SubTitle">
