Updated Logo Icon

--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -5,7 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp1"
         mc:Ignorable="d"
-        WindowStartupLocation="CenterScreen"   
+        WindowStartupLocation="CenterScreen" 
+        Icon="Asset/favicon.ico"
         Title="Spyder Pattern Generator"    
         ResizeMode="CanMinimize"
         Height="759.065" 
