--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -221,7 +221,7 @@
                         <Button Content="Generate GCode" Style="{StaticResource SidebarButtonStyle}" Click="BtnGenGCode_Click"/>
                         <Button Content="Export GCode As File" Style="{StaticResource SidebarButtonStyle}" Click="BtnExportGCode_Click"/>
 
-                        <TextBlock Text="Pattern Name" 
+                        <TextBlock Text="Pattern File Name" 
                                    Foreground="White" 
                                    Margin="0,16,0,4"/>
                         <TextBox Height="30" Padding="8,6" x:Name="StrPatternName" />
@@ -243,6 +243,7 @@
                                      FontSize="11"
                                      Height="140"
                                      AcceptsReturn="True"
+                                     
                                      TextWrapping="Wrap"
                                      VerticalScrollBarVisibility="Auto"/>
                         </Border>
@@ -305,10 +306,18 @@
                                     <TextBox Height="30" Padding="8,6" x:Name="NumKickRatioPcg" Style="{StaticResource NumberInputTextBox}"/>
                                 </StackPanel>
 
-                                <StackPanel Grid.Column="3" Grid.Row="1" Margin="0,0,8,0">
-                                    <TextBlock Text="Total Estimated Feet" Style="{StaticResource InputLabelStyle}"/>
-                                    <Label Height="30" Padding="8,6" x:Name="NumTotalEstFeet" HorizontalContentAlignment="Right"/>
-                                </StackPanel>
+                                <DockPanel Grid.Column="3" 
+                                            Grid.Row="1" 
+                                            Margin="0,0,8,0" 
+                                            VerticalAlignment="Bottom" 
+                                           LastChildFill="True">
+                                    <TextBlock Text="Tape Feet :" Style="{StaticResource InputLabelStyle}"
+                                               HorizontalAlignment="Left" DockPanel.Dock="Left" VerticalAlignment="Bottom"
+                                               FontWeight="Bold" Width="70" Padding="0,8" FontSize="13"/>
+                                    <Label Height="30" Padding="0,8" FontWeight="Bold" FontSize="13"
+                                           HorizontalAlignment="Stretch" x:Name="NumTotalEstFeet" DockPanel.Dock="Right"
+                                           HorizontalContentAlignment="Right"/>
+                                </DockPanel>
                                 
                             </Grid> 
 
@@ -401,6 +410,7 @@
 
                     
                     <!-- Additional G-Code Variables -->
+                        <!--
                     <Border Style="{StaticResource CardStyle}">
                         <Grid>
                             <Grid.ColumnDefinitions>
@@ -438,11 +448,12 @@
                             </StackPanel>
                         </Grid>
                     </Border>
+                        -->
 
                     <!-- Machine G-Code Variables - Collapsible -->
 
                     <Border Style="{StaticResource CardStyle}">
-                        <StackPanel MouseLeftButtonDown="GCodeSection_Click">
+                        <StackPanel>
                             <Grid>
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="*"/>
@@ -469,45 +480,89 @@
                                                   Margin="0,0,8,0"
                                                   Checked="CollapseGCodeToggle_Checked"
                                                   Unchecked="CollapseGCodeToggle_Unchecked"
-                                                   Style="{StaticResource BaseButtonStyle}" ToolTip="Toggle G-Code Editor Section"
+                                                  Style="{StaticResource BaseButtonStyle}" 
+                                                  ToolTip="Toggle G-Code Editor Section"
                                                   />
                                 </StackPanel>
                             </Grid>
 
-                            <Grid x:Name="GCodeEditorSection" Visibility="Collapsed">
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="*"/>
-                                    <ColumnDefinition Width="*"/>
-                                    <ColumnDefinition Width="*"/>
-                                </Grid.ColumnDefinitions>
+                            <StackPanel  x:Name="GCodeEditorSection" Visibility="Collapsed">
+                                
+                                <Grid Margin="0,10,0,20">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="Auto"/>
+                                        <ColumnDefinition Width="*"/>
+                                        <ColumnDefinition Width="*"/>
+                                        <ColumnDefinition Width="*"/>
+                                        <ColumnDefinition Width="*"/>
+                                    </Grid.ColumnDefinitions>
 
-                                <StackPanel Grid.Column="0" Margin="0,0,8,0">
-                                    <TextBlock Text="Startup GCode" Style="{StaticResource InputLabelStyle}"/>
-                                    <TextBox Height="120" AcceptsReturn="True" TextWrapping="Wrap"
+
+                                    <StackPanel Grid.Column="0" VerticalAlignment="Bottom" Margin="0,0,8,0">
+                                        <CheckBox Content="Enable Pump" Margin="0,0,0,12" x:Name="pumpState" Checked="Pump_Enabled" VerticalAlignment="Center" 
+                              Unchecked="Pump_Disabled" Width="100"/>
+                                    </StackPanel>
+
+                                    <StackPanel Grid.Column="1" Margin="0,0,8,0">
+                                        <TextBlock Text="Pump on code" Style="{StaticResource InputLabelStyle}"/>
+                                        <TextBox x:Name="StrPumpOnCode" Height="30" Padding="8,6"/>
+                                    </StackPanel>
+
+                                    <StackPanel Grid.Column="2" Margin="0,0,8,0">
+                                        <TextBlock Text="Pump off code" Style="{StaticResource InputLabelStyle}"/>
+                                        <TextBox x:Name="StrPumpOffCode" Height="30" Padding="8,6"/>
+                                    </StackPanel>
+
+                                    <StackPanel Grid.Column="3" Margin="0,0,8,0">
+                                        <TextBlock Text="Cycles per shell" Style="{StaticResource InputLabelStyle}"/>
+                                        <TextBox Height="30" Padding="8,6" x:Name="NumCyclesPerShell" Style="{StaticResource IntegerInputTextBox}"/>
+                                    </StackPanel>
+
+                                    <StackPanel Grid.Column="4" Margin="0,0,0,0">
+                                        <TextBlock Text="Duration" Style="{StaticResource InputLabelStyle}"/>
+                                        <TextBox Height="30" Padding="8,6" x:Name="NumDuration" Style="{StaticResource IntegerInputTextBox}"/>
+                                    </StackPanel>
+                                </Grid>
+                                
+                                
+                                <Grid>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="*"/>
+                                        <ColumnDefinition Width="*"/>
+                                        <ColumnDefinition Width="*"/>
+                                    </Grid.ColumnDefinitions>
+
+                                    <StackPanel Grid.Column="0" Margin="0,0,8,0">
+                                        <TextBlock Text="Startup GCode" Style="{StaticResource InputLabelStyle}"/>
+                                        <TextBox Height="120" AcceptsReturn="True" TextWrapping="Wrap"
                                              FontFamily="Consolas" FontSize="12" 
                                              VerticalScrollBarVisibility="Auto"
                                              x:Name="TxtStartGcode"
                                              Padding="8,6"/>
-                                </StackPanel>
+                                    </StackPanel>
 
-                                <StackPanel Grid.Column="1" Margin="8,0,8,0">
-                                    <TextBlock Text="End of Main Wrap" Style="{StaticResource InputLabelStyle}"/>
-                                    <TextBox Height="120" AcceptsReturn="True" TextWrapping="Wrap"
+                                    <StackPanel Grid.Column="1" Margin="8,0,8,0">
+                                        <TextBlock Text="End of Main Wrap" Style="{StaticResource InputLabelStyle}"/>
+                                        <TextBox Height="120" AcceptsReturn="True" TextWrapping="Wrap"
                                              FontFamily="Consolas" FontSize="12" 
                                              VerticalScrollBarVisibility="Auto"
                                              x:Name="TxtEndMWrap"
                                              Padding="8,6"/>
-                                </StackPanel>
+                                    </StackPanel>
 
-                                <StackPanel Grid.Column="2" Margin="8,0,0,0">
-                                    <TextBlock Text="End of Complete Wrap" Style="{StaticResource InputLabelStyle}"/>
-                                    <TextBox Height="120" AcceptsReturn="True" TextWrapping="Wrap"
+                                    <StackPanel Grid.Column="2" Margin="8,0,0,0">
+                                        <TextBlock Text="End of Complete Wrap" Style="{StaticResource InputLabelStyle}"/>
+                                        <TextBox Height="120" AcceptsReturn="True" TextWrapping="Wrap"
                                              FontFamily="Consolas" FontSize="12" 
                                              VerticalScrollBarVisibility="Auto"
                                              x:Name="TxtEndCWrap"
                                              Padding="8,6"/>
-                                </StackPanel>
-                            </Grid>
+                                    </StackPanel>
+                                </Grid>
+                                
+                                
+                            </StackPanel>
+                            
                         </StackPanel>
                     </Border>
                 </StackPanel>
